// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryResultHeader should render correctly with the button disabled 1`] = `
<div
  className="QueryResultHeader query-result-flex-container"
>
  <div>
    <WithStyles(ForwardRef(Typography))
      className="section-title"
    >
      View Patient Count by Sites
    </WithStyles(ForwardRef(Typography))>
    <div />
    <WithStyles(ForwardRef(Tooltip))
      arrow={true}
      classes={
        Object {
          "tooltip": "reload-tooltip",
        }
      }
      enterDelay={1000}
      placement="bottom-start"
      title={
        <ForwardRef(WithStyles)>
          Reload the criteria into the Find Patients tab
        </ForwardRef(WithStyles)>
      }
    >
      <WithStyles(ForwardRef(Button))
        className="details"
        disabled={true}
        size="small"
        variant="outlined"
      >
        <WithStyles(ForwardRef(Typography))
          className="query-result-panel-text"
        >
          Edit Criteria
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <WithStyles(ForwardRef(Divider))
    variant="middle"
  />
</div>
`;

exports[`QueryResultHeader should render correctly with the button enabled 1`] = `
<div
  className="QueryResultHeader query-result-flex-container"
>
  <div>
    <WithStyles(ForwardRef(Typography))
      className="section-title"
    >
      View Patient Count by Sites
    </WithStyles(ForwardRef(Typography))>
    <div />
    <WithStyles(ForwardRef(Tooltip))
      arrow={true}
      classes={
        Object {
          "tooltip": "reload-tooltip",
        }
      }
      enterDelay={1000}
      placement="bottom-start"
      title={
        <ForwardRef(WithStyles)>
          Reload the criteria into the Find Patients tab
        </ForwardRef(WithStyles)>
      }
    >
      <WithStyles(ForwardRef(Button))
        className="details"
        disabled={false}
        size="small"
        variant="outlined"
      >
        <WithStyles(ForwardRef(Typography))
          className="query-result-panel-text"
        >
          Edit Criteria
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <WithStyles(ForwardRef(Divider))
    variant="middle"
  />
</div>
`;
